Fixed the spacing for the placeorder-info spot

--- a/client/src/scss/media_queries.scss
+++ b/client/src/scss/media_queries.scss
@@ -469,7 +469,10 @@
 	.placeorder-action {
 		margin: auto;
 		margin-bottom: 20px;
-	}
+  }
+  // .placeorder-info-container {
+  //   margin: 0 !important;
+  // }
 	.glow_leds_text {
 		font-size: 28px !important;
 	}
@@ -484,7 +487,7 @@
 		background-color: unset !important;
 		border: 0 !important;
 		box-shadow: unset !important;
-		max-width: 25rem !important;
+		max-width: 32rem !important;
 		margin: 0 auto !important;
 		padding: 0 !important;
 	}
